security.tf
#------------------------------------------------------------------------------
# Security Group for Public Subnet:
#------------------------------------------------------------------------------
resource "aws_security_group" "public_sg" {
  description = "Security Group for Public Subnet"
  name        = "public-sg"
  vpc_id      = aws_vpc.test_vpc.id
  ingress {
    description = "Enable SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "Enable HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "Enable HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "Allow all outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

#------------------------------------------------------------------------------
# Security Group for Private Subnet:
#------------------------------------------------------------------------------
# Private subnet available from Public subnet by default,
# but Private subnet not available from Internet.
#------------------------------------------------------------------------------
